--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.1",
+    "@langchain/community": "^1.0.5",
+    "@langchain/core": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
@@ -17,13 +19,14 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.4",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
-    "zod": "^4.1.12"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
