--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "openai": "^6.9.1",
     "pdf-parse": "^1.1.4",
     "postcss": "^8.5.6",
     "react": "19.2.0",
