--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.1",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^1.0.5",
     "@langchain/core": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.3",
